Update project title and description in projects.njk Add description and date to react-render.md Add mono font to tailwind.config.js Add description and date to hello-world.md Add filters and passthrough copy in .eleventy.js Update layout.njk to include meta description and Prism CSS

--- a/_includes/footer.njk
+++ b/_includes/footer.njk
@@ -1,3 +1,10 @@
-<footer class="max-w-5xl m-auto py-7 flex justify-between">
-    my footer
+<footer class="bg-cyan-900 text-white  w-full">
+    <div class="max-w-5xl m-auto py-7 px-2 flex justify-between content-center">
+        <div>
+            <p>&copy; Jeremy James 2024</p>
+        </div>
+        <div>
+            <a href="https://github.com/JeremyJamesL"><img src="/assets/images/github.png" alt="" class="max-w-8"></a>
+        </div>
+    </div>
 </footer>
