--- a/_includes/header.njk
+++ b/_includes/header.njk
@@ -1,13 +1,16 @@
 <header class="bg-cyan-900 text-white">
-    <div class="max-w-5xl m-auto py-7 px-2 flex justify-between content-center font-sans">    
-        <a href="/" class="font-bold text-3xl">Jezl.xyz</a>
+    <div class="max-w-5xl m-auto py-7 px-2 flex justify-between items-center">    
+        <div class="flex items-center border-r-100">
+            <img src="https://avatars.githubusercontent.com/u/47485563?v=4" alt="" class="rounded-full border-white border-2 w-full h-16 mr-3">
+            <a href="/" class="font-bold text-3xl">Jezl.xyz</a>
+        </div>
         <nav>
             <ul class="flex gap-5 text-lg">
                 <li class="hover:underline"> 
                     <a href="/posts">Posts</a>
                 </li>
                 <li class="hover:underline"> 
-                    <a href="/project">Projects</a>
+                    <a href="/projects">Projects</a>
                 </li>
             </ul>
         </div>
