--- a/_includes/layout.njk
+++ b/_includes/layout.njk
@@ -4,14 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{title}}</title>
+    <meta name="description" content="{{description}}">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap" rel="stylesheet">
+    <link
+			href="https://unpkg.com/prismjs@1.20.0/themes/prism-okaidia.css"
+			rel="stylesheet"
+		/>
     <link rel="stylesheet" href="/output.css"/>
+    
 </head>
 <body>
     {% include "header.njk" %}
-    <main class="max-w-xl m-auto py-8">
+    <main class="max-w-2xl m-auto py-8 px-2">
         {{content | safe}}
     </main>
     {% include "footer.njk" %}
