--- a/_includes/subs/layout-post.njk
+++ b/_includes/subs/layout-post.njk
@@ -1,6 +1,9 @@
 ---
 layout: layout.njk
 ---
+<h1 class="font-bold text-4xl italic mb-5">{{title}}</h1>
 
-<h1>{{title}}</h1>
+<div class="post">
+    {{content | safe}}
+</div>
 
