--- a/index.njk
+++ b/index.njk
@@ -2,18 +2,18 @@
 layout: subs/layout-page.njk
 title: Hey, i'm Jeremy👋
 ---
-
 <section class="mb-8">
     <p class="mb-2">
         I'm currently working as a Solutions Engineer at <a href="https://algolia.com">Algolia</a>
     </p>
     
     <p class="mb-2">
-    Culpa ex non aliqua duis. In <a href="">consequat</a> nostrud eiusmod consequat adipisicing elit in. Proident nisi sint deserunt qui esse ad nulla aliquip. Nisi dolore duis cillum eu veniam laboris.
+        Culpa ex non aliqua duis. In <a href="">consequat</a> nostrud eiusmod consequat adipisicing elit in. Proident nisi sint deserunt qui esse ad nulla aliquip. Nisi dolore duis cillum eu veniam laboris.
     </p>
     
     <p class="mb-2">
-    Excepteur in dolore consectetur ex consequat sunt fugiat velit esse irure sit qui. Nisi adipisicing esse laboris do velit est ipsum nulla ipsum aliquip irure. Deserunt irure elit <a href="">laborum</a> labore do veniam enim sint Lorem. Elit ipsum incididunt aliquip tempor est aute nulla do aliqua est ut consectetur ea.</p>
+        Excepteur in dolore consectetur ex consequat sunt fugiat velit esse irure sit qui. Nisi adipisicing esse laboris do velit est ipsum nulla ipsum aliquip irure. Deserunt irure elit <a href="">laborum</a> labore do veniam enim sint Lorem. Elit ipsum incididunt aliquip tempor est aute nulla do aliqua est ut consectetur ea.
+    </p>
 </section>
 
 <section class="mb-8">
@@ -22,4 +22,21 @@ title: Hey, i'm Jeremy👋
     </h2>
 
    {%include 'postslist.njk'%}
+   <div class="text-center mt-10">
+    <a href="/posts" class="font-bold inline-block text-xl">View all posts 📝</a>
+   </div>
+</section>
+
+
+<section class="mb-8">
+    <h2 class="font-bold text-3xl italic mb-5"> 
+        Latest projects
+    </h2>
+
+   {%include 'projectslist.njk'%}
+
+   <div class="text-center mt-10">
+    <a href="/projects" class="font-bold inline-block text-xl">View all projects 🧰</a>
+   </div>
+
 </section>
