--- a/posts/index.njk
+++ b/posts/index.njk
@@ -1,5 +1,8 @@
 ---
 layout: layout.njk
-title: Blog posts
+title: All posts
+description: A list of all posts
 ---
+<h1 class="font-bold text-4xl italic mb-5">{{title}}</h1>
+
 {%include 'postslist.njk'%}
