--- a/style/tailwind.css
+++ b/style/tailwind.css
@@ -8,3 +8,15 @@ main a {
     border-bottom: 1px solid #3761ad;
     border-style: dashed;
 }
+
+.post p {
+    margin-bottom: 1rem;
+}
+
+.post > h2 {
+        font-style: italic;
+        font-weight: 700;
+        font-size: 1.875rem;
+        line-height: 2.25rem;
+        margin-bottom: 1.25rem;
+}
