--- a/_includes/postslist.njk
+++ b/_includes/postslist.njk
@@ -2,7 +2,7 @@
     {%- for post in collections.post -%}
     <li class="w-full mb-4 flex justify-between">
         <h3>
-            <a href="{{post.url}}" class="font-bold">
+            <a href="{{post.url}}" class="font-bold text=md">
                 {{ post.data.title }}
             </a>
         </h3>
