--- a/index.njk
+++ b/index.njk
@@ -4,15 +4,19 @@ title: Hey, i'm Jeremy👋
 ---
 <section class="mb-8">
     <p class="mb-2">
-        I'm currently working as a Solutions Engineer at <a href="https://algolia.com">Algolia</a>
+        I am a web developer and solutions engineer, currently working at <a href="https://algolia.com">Algolia</a>. 
     </p>
     
     <p class="mb-2">
-        Culpa ex non aliqua duis. In <a href="">consequat</a> nostrud eiusmod consequat adipisicing elit in. Proident nisi sint deserunt qui esse ad nulla aliquip. Nisi dolore duis cillum eu veniam laboris.
+        Here you will find <a href="/posts">blog posts</a> about web development, linux and digital autonomy / minimalism. I also have an area dedicated to the <a href="/projects/">projects</a> I am working on. 
     </p>
     
-    <p class="mb-2">
-        Excepteur in dolore consectetur ex consequat sunt fugiat velit esse irure sit qui. Nisi adipisicing esse laboris do velit est ipsum nulla ipsum aliquip irure. Deserunt irure elit <a href="">laborum</a> labore do veniam enim sint Lorem. Elit ipsum incididunt aliquip tempor est aute nulla do aliqua est ut consectetur ea.
+    <p class="mb-2">    
+        If you would like help with a project, then contact me <a href="mailto:hello@jezl.xyz">here</a>.
+    </p>
+
+    <p class="mb-2">    
+        This site is built with <a href="https://11ty.com">11ty</a> and <a href="https://tailwind.com">tailwind.</a>. Posts are written in markdown and hosted on a VPS.
     </p>
 </section>
 
