--- a/_includes/layout.njk
+++ b/_includes/layout.njk
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{title}}</title>
     <meta name="description" content="{{description}}">
+    <link rel="apple-touch-icon" sizes="180x180" href="/assets/images/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/assets/images/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/assets/images/favicon-16x16.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap" rel="stylesheet">
@@ -13,13 +16,13 @@
 			rel="stylesheet"
 		/>
     <link rel="stylesheet" href="/output.css"/>
-    
 </head>
 <body>
     {% include "header.njk" %}
-    <main class="max-w-2xl m-auto py-8 px-2">
+    <main class="max-w-2xl m-auto py-12 px-2">
         {{content | safe}}
     </main>
     {% include "footer.njk" %}
+    <script src="/scripts/index.js"></script>
 </body>
 </html>
