--- a/_includes/footer.njk
+++ b/_includes/footer.njk
@@ -1,4 +1,4 @@
-<footer class="bg-cyan-900 text-white w-full">
+<footer class="absolute bottom-0 bg-cyan-900 text-white w-full">
     <div class="max-w-5xl m-auto py-7 px-2 flex justify-between content-center">
         <div>
             <p>&copy; Jeremy James 2024</p>
