--- a/_includes/subs/layout-post.njk
+++ b/_includes/subs/layout-post.njk
@@ -1,5 +1,5 @@
 ---
-layout: layout.njk
+layout: /layouts/layout.njk
 ---
 <h1 class="font-bold text-4xl italic mb-2">{{title}}</h1>
 <time class="font-mono text-sm text-gray-600 mb-5 block">{{ date | postDate }}</time>
