--- a/index.njk
+++ b/index.njk
@@ -8,7 +8,7 @@ title: Hey, i'm Jeremy👋
     </p>
     
     <p class="mb-2">
-        Here you will find <a href="/posts">blog posts</a> about web development, linux and digital autonomy / minimalism. I also have an area dedicated to the <a href="/projects/">projects</a> I am working on. 
+        Here you will find <a href="/posts">blog posts</a> about web development, linux and digital autonomy. I also have an area dedicated to the <a href="/projects/">projects</a> I am working on. 
     </p>
     
     <p class="mb-2">    
