--- a/projects/index.njk
+++ b/projects/index.njk
@@ -1,9 +1,8 @@
 ---
-layout: layout.njk
+layout: /layouts/layout.njk
 title: All projects
 description: A list of all projects
 ---
 <h1 class="font-bold text-4xl italic mb-8">{{title}}</h1>
-
 
 {%include 'projectslist.njk'%}
