--- a/style/tailwind.css
+++ b/style/tailwind.css
@@ -32,3 +32,40 @@ code {
     word-wrap: break-word;
     font-family: SFMono-Regular, Menlo, Monaco, Consolas, Liberation Mono, Courier New, monospace;
 }
+
+.headshot {
+    shape-outside: circle(50%);
+    float: left;
+}
+
+
+.curved {
+    border-bottom-right-radius: 50% 10%;
+}
+
+.curved-top {
+    border-top-left-radius: 50% 10%;
+}
+@keyframes rotation {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
+    } 
+
+.loader {
+    width: 48px;
+    height: 48px;
+    border: 5px solid #FFF;
+    border-bottom-color: transparent;
+    border-radius: 50%;
+    /* display: inline-block; */
+    box-sizing: border-box;
+    animation: rotation 1s linear infinite;
+    }
+
+/* .bg-overlay {
+    background-image: linear-gradient(to right bottom, #ffb900, #ff7730), url(../img/nat-5.jpg);;
+} */
