--- a/_includes/components/landing-page/header.njk
+++ b/_includes/components/landing-page/header.njk
@@ -1,14 +1,14 @@
-<header class="h-[50vh] bg-cyan-900 flex items-start zig-zag relative curved ">
+<header class="sm:h-[50vh] h-screen bg-cyan-900 flex items-start zig-zag relative curved ">
     <div class="bg-[#166351] w-full absolute top-0">
         <div class="max-w-5xl m-auto p-2 text-white text-center">Need help with a website? <a href="tel:+447860629798" class="font-bold">Call ☎️ </a>or <a href="mailto:jeremyluscombe@gmail.com" class="font-bold">email 📧</a></div>
     </div>
     <div class="max-w-4xl px-2 m-auto">
-        <div class="mb-9">
-            <img class="headshot rounded-full mr-9 w-40 border-4" src="https://avatars.githubusercontent.com/u/47485563?v=4"/>
+        <div class="mb-9 flex flex-col sm:block ">
+            <img class="headshot rounded-full mr-9 w-40 border-4 mb-9" src="https://avatars.githubusercontent.com/u/47485563?v=4"/>
             <div class="text-white">
-                <h1 class="text-white font-bold text-4xl mb-2">Hi, i'm <span class="underline decoration-dotted">Jeremy</span> 👋</h1>
+                <h1 class="text-white font-bold text-4xl mb-4">Hi, i'm <span class="underline decoration-dotted">Jeremy</span> 👋</h1>
                 <p class="mb-2">A web developer based in London, UK. I like working with small businesses on small budgets to create strong web presences.</p>
-                <p>If you want help establishing a website and web presence for your company get in contact via <a href="" class="border-b-2 border-dashed">email</a>, or ring me on the <a href="" class="border-b-2 border-dashed">number</a> above</p>
+                <p>If you want help establishing a website and web presence for your company get in contact via <a href="mailto:jeremyluscombe@gmail.com" class="border-b-2 border-dashed">email</a>, or ring me on the <a href="tel:+447860629798" class="border-b-2 border-dashed">number</a> above</p>
             </div>
         </div>
         <div class="absolute bottom-5 left-1/2 -translate-x-1/2">
