--- a/_includes/components/landing-page/header.njk
+++ b/_includes/components/landing-page/header.njk
@@ -1,5 +1,5 @@
-<header class="sm:h-[50vh] h-screen bg-cyan-900 flex items-start zig-zag relative curved ">
-    <div class="bg-[#166351] w-full absolute top-0">
+<header class="sm:h-[60vh] h-dvh bg-cyan-900 flex items-start zig-zag relative curved ">
+    <div class="bg-[#166351] w-full absolute top-0 border-b-2 border-white">
         <div class="max-w-5xl m-auto p-2 text-white text-center">Need help with a website? <a href="tel:+447860629798" class="font-bold">Call ☎️ </a>or <a href="mailto:jeremyluscombe@gmail.com" class="font-bold">email 📧</a></div>
     </div>
     <div class="max-w-4xl px-2 m-auto">
@@ -8,11 +8,11 @@
             <div class="text-white">
                 <h1 class="text-white font-bold text-4xl mb-4">Hi, i'm <span class="underline decoration-dotted">Jeremy</span> 👋</h1>
                 <p class="mb-2">A web developer based in London, UK. I like working with small businesses on small budgets to create strong web presences.</p>
-                <p>If you want help establishing a website and web presence for your company get in contact via <a href="mailto:jeremyluscombe@gmail.com" class="border-b-2 border-dashed">email</a>, or ring me on the <a href="tel:+447860629798" class="border-b-2 border-dashed">number</a> above</p>
+                <p>If you're in need of a website and online presence for your company get in contact via <a href="mailto:jeremyluscombe@gmail.com" class="border-b-2 border-dashed">email</a>, or ring me on the <a href="tel:+447860629798" class="border-b-2 border-dashed">number</a> above</p>
             </div>
         </div>
         <div class="absolute bottom-5 left-1/2 -translate-x-1/2">
-            <a href="http://jezl.xyz/freelance-web-dev/#contact-form" class="no-underline inline-block text-white border-none bg-[#166351] font-semibold p-2 px-4 rounded-full">Contact me ↴</a>
+            <a href="https://jezl.xyz/freelance-web-dev/#contact-form" class="no-underline inline-block text-white border-none bg-[#166351] font-semibold p-2 px-4 rounded-full">Contact me &#8595;</a>
         </div>
     </div>
 </header>
