--- a/_includes/components/landing-page/freelanceProjectsList.njk
+++ b/_includes/components/landing-page/freelanceProjectsList.njk
@@ -1,7 +1,7 @@
 <ul class="grid grid-cols-1 sm:grid-cols-2 gap-10">
     {%- for post in collections.freelance -%}
     <div class="shadow-xl rounded-lg border-2 border-gray-50 ">
-        <div class="bg-cyan-900 p-5 h-64 curved bg-cover rounded-t-md" style="background-image: url('/assets/images/{{post.data.thumb}}')">
+        <div class="bg-cyan-900 p-5 h-80 sm:h-64 curved bg-cover rounded-t-md bg-center" style="background-image: url('/assets/images/{{post.data.thumb}}')">
         </div>
         <div class="p-5">
             <a class="font-bold mb-5 inline-block" href="{{post.data.link}}">{{ post.data.title }}</a>
