--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="scroll-smooth">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -22,19 +22,19 @@
     <script type="text/javascript"
     src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
     <script src="/scripts/index.js"></script>
-  <script type="text/javascript">
+    <script type="text/javascript">
     // Email.js initialize on load
-(function () {
-emailjs.init({
-    publicKey: "Mt5AFtPFH-P2XS_cP",
-    limitRate: {
-      // Set the limit rate for the application
-      id: "app",
-      // Allow 1 request per 10s
-      throttle: 10000,
-    },
-  });
-})();
+        (function () {
+        emailjs.init({
+            publicKey: "Mt5AFtPFH-P2XS_cP",
+            limitRate: {
+            // Set the limit rate for the application
+            id: "app",
+            // Allow 1 request per 10s
+            throttle: 10000,
+            },
+        });
+        })();
   </script>
 </body>
 </html>
