--- a/freelance-web-dev.njk
+++ b/freelance-web-dev.njk
@@ -1,5 +1,5 @@
 ---
 layout: layouts/layout-landing-page.njk
 ---
-<h1 class="font-bold text-4xl italic text-center mb-9 underline decoration-dotted">Some recent websites</h1>
+<h1 class="font-bold text-4xl italic text-center mb-9 underline decoration-dotted">Recent projects</h1>
 {%include 'components/landing-page/freelanceProjectslist.njk'%}
