--- a/_includes/header.njk
+++ b/_includes/header.njk
@@ -1,7 +1,7 @@
 <header class="bg-cyan-900 text-white">
     <div class="max-w-5xl m-auto py-4 px-2 flex justify-between items-center">    
         <div class="flex items-center justify-between border-r-100">
-            <img src="https://avatars.githubusercontent.com/u/47485563?v=4" alt="" class="flex-auto rounded-full border-white border-2 h-auto max-w-20 mr-3">
+            <img src="https://media.licdn.com/dms/image/C5103AQE8aSfgMwS64w/profile-displayphoto-shrink_800_800/0/1517277267148?e=1727308800&v=beta&t=5CTXszgTtb6sNf4lKp-DNkY8PH_PwYsurEVmN-luXCQ" alt="" class="flex-auto rounded-full border-white border-2 h-auto max-w-20 mr-3">
             <div class="flex flex-col flex-1">
                 <a href="/" class="font-bold text-2xl sm:text-3xl"><span class="sm:hidden">Jeremy J</span><span class="hidden sm:block">Jeremy James</span></a>
 
