--- a/_includes/components/landing-page/footer.njk
+++ b/_includes/components/landing-page/footer.njk
@@ -1,17 +1,15 @@
-<footer class=" bg-cyan-900 py-24 px-2 relative curved-top">
-    <div class="max-w-2xl px-2 m-auto">
-        <h2 class="font-bold text-3xl italic mb-5 text-white underline decoration-dotted"> 
-            Contact me
-        </h2>
-        <form action="" class="flex flex-col w-full mb-5" id="contact-form">
-            <input type="text" class="mb-5 w-full rounded-lg py-3 px-2" placeholder="Name">
-            <input type="text" class="mb-5 w-full rounded-lg py-3 px-2" placeholder="Email">
-            <textarea class="mb-5 w-full rounded-lg py-3 px-2" placeholder="Message"></textarea>
-            <button id="submit-email" class="no-underline bl text-white border-none bg-[#166351] font-semibold  p-2 px-4 rounded-full">Submit</button>
-        </form>
-        <div class="text-center">
-            <div class="loader hidden" id="form-loader"></div>
-        </div>
-        <div class="text-white text-center" id="form-message"></div>
+<footer class=" ">
+  <div class="">
+    <h2 class="">Contact me</h2>
+    <form action="" class="" id="contact-form">
+      <input type="text" class="" placeholder="Name" />
+      <input type="text" class="" placeholder="Email" />
+      <textarea class="" placeholder="Message"></textarea>
+      <button id="submit-email" class="">Submit</button>
+    </form>
+    <div class="">
+      <div class="loader" id="form-loader"></div>
     </div>
+    <div class="" id="form-message"></div>
+  </div>
 </footer>
