--- a/_includes/footer.njk
+++ b/_includes/footer.njk
@@ -1,10 +1,15 @@
-<footer class="absolute bottom-0 bg-cyan-900 text-white w-full">
-    <div class="max-w-5xl m-auto py-7 px-2 flex justify-between content-center">
-        <div>
-            <p>&copy; Jeremy James 2024</p>
-        </div>
-        <div>
-            <a href="https://github.com/JeremyJamesL"><img src="/assets/images/github.png" alt="" class="max-w-8"></a>
-        </div>
-    </div>
+<footer class="py-8 font-light text-center">
+  <div class="container">
+    <p class="mb-2">&copy; Jeremy James 2024. All rights reserved</p>
+
+    <ul class="flex justify-center gap-2">
+      <li class="underline"><a href="https://x.com/JJDEV6">Twitter</a></li>
+      <li class="underline">
+        <a href="https://github.com/JeremyJamesL/">Github</a>
+      </li>
+      <li class="underline">
+        <a href="mailto:jeremyluscombe@gmail.com">Email</a>
+      </li>
+    </ul>
+  </div>
 </footer>
