--- a/_includes/components/landing-page/freelanceProjectsList.njk
+++ b/_includes/components/landing-page/freelanceProjectsList.njk
@@ -1,22 +1,30 @@
-<ul class="grid grid-cols-1 sm:grid-cols-2 gap-10">
-    {%- for post in collections.freelance -%}
-    <div class="shadow-xl rounded-lg border-2 border-gray-50 ">
-        <div class="bg-cyan-900 p-5 h-80 sm:h-64 curved bg-cover rounded-t-md bg-center" style="background-image: url('/assets/images/{{post.data.thumb}}')">
-        </div>
-        <div class="p-5">
-            <a class="font-bold mb-5 inline-block" href="{{post.data.link}}">{{ post.data.title }}</a>
-            <div class="flex mb-5 flex-wrap">
-                {% for item in post.data.pills%}
-                <li class="rounded-full text-xs py-1 px-3 shadow-sm font-semibold border-2 border-gray-100 flex items-center mr-2 mb-2">
-                    <span class="text-[#166351] text-xl leading-none mr-2">⦿</span>
-                    <span>{{item}}</span>
-                </li>
-                {% endfor %}
-            </div>
-            <div class="text-right">
-                <a href="{{post.data.link}}" class="no-underline text-white border-none bg-[#166351] font-semibold text-xs p-2 px-4 rounded-full">Visit site <span class="ml-1 font-normal">➜</span></a>
-            </div>
-        </div>
+<ul class="">
+  {%- for post in collections.freelance -%}
+  <div class=" ">
+    <div
+      class=""
+      style="background-image: url('/assets/images/{{ post.data.thumb }}')"
+    ></div>
+    <div class="">
+      <a class="" href="{{ post.data.link }}">{{ post.data.title }}</a>
+      <div class="flex mb-5 flex-wrap">
+        {% for item in post.data.pills%}
+        <li
+          class="rounded-full text-xs py-1 px-3 shadow-sm font-semibold border-2 border-gray-100 flex items-center mr-2 mb-2"
+        >
+          <span class="text-[#166351] text-xl leading-none mr-2">⦿</span>
+          <span>{{ item }}</span>
+        </li>
+        {% endfor %}
+      </div>
+      <div class="text-right">
+        <a
+          href="{{ post.data.link }}"
+          class="no-underline text-white border-none bg-[#166351] font-semibold text-xs p-2 px-4 rounded-full"
+          >Visit site <span class="ml-1 font-normal">➜</span></a
+        >
+      </div>
     </div>
-    {%- endfor -%}
+  </div>
+  {%- endfor -%}
 </ul>
