--- a/_includes/layouts/layout-landing-page.njk
+++ b/_includes/layouts/layout-landing-page.njk
@@ -1,8 +1,9 @@
 ---
 layout: /layouts/base.njk
 ---
+
 {% include "../components/landing-page/header.njk" %}
-<main class="max-w-4xl m-auto py-12 px-2 pb-32">
-    {{content | safe}}
+<main class="">
+  {{ content | safe }}
 </main>
 {% include "../components/landing-page/footer.njk" %}
