--- a/_includes/layouts/layout.njk
+++ b/_includes/layouts/layout.njk
@@ -1,8 +1,9 @@
 ---
 layout: /layouts/base.njk
 ---
+
 {% include "header.njk" %}
-<main class="max-w-2xl m-auto py-12 px-2 pb-32">
-    {{content | safe}}
+<main class="">
+  {{ content | safe }}
 </main>
 {% include "footer.njk" %}
