--- a/_includes/subs/layout-note.njk
+++ b/_includes/subs/layout-note.njk
@@ -2,8 +2,12 @@
 layout: /layouts/layout.njk
 ---
 
-<h1 class="font-bold text-2xl italic mb-5">{{title}}</h1>
+<div class="container">
+  <div class="border-b-2 mb-5">
+    <h1 class="font-heading text-3xl text-teal-900 mb-2">{{ title }}</h1>
+  </div>
 
-<div class="post">
-    {{content | safe}}
+  <div class="post font-light">
+    {{ content | safe }}
+  </div>
 </div>
