--- a/_includes/subs/layout-page.njk
+++ b/_includes/subs/layout-page.njk
@@ -2,6 +2,6 @@
 layout: /layouts/layout.njk
 ---
 
-<h1 class="font-bold text-4xl italic mb-5">{{title}}</h1>
+<h1 class="">{{ title }}</h1>
 
-{{content | safe}}
+{{ content | safe }}
