--- a/_includes/subs/layout-post.njk
+++ b/_includes/subs/layout-post.njk
@@ -1,10 +1,20 @@
 ---
 layout: /layouts/layout.njk
 ---
-<h1 class="font-bold text-4xl italic mb-2">{{title}}</h1>
-<time class="font-mono text-sm text-gray-600 mb-5 block">{{ date | postDate }}</time>
 
-<div class="post">
-    {{content | safe}}
+<div class="container">
+  {%if image %}
+  <img src="{{ image }}" alt="{{ title }}" class="mb-5" />
+  {%endif%}
+
+  <div class="border-b-2 mb-5">
+    <h1 class="font-heading text-2xl text-teal-900 mb-2">{{ title }}</h1>
+    <time class="text-lg font-light text-gray-600 mb-5 block">{{
+      date | postDate
+    }}</time>
+  </div>
+
+  <div class="post font-light">
+    {{ content | safe }}
+  </div>
 </div>
-
