--- a/posts/index.njk
+++ b/posts/index.njk
@@ -3,6 +3,5 @@ layout: /layouts/layout.njk
 title: All posts
 description: A list of all posts
 ---
-<h1 class="font-bold text-4xl italic mb-5">{{title}}</h1>
 
-{%include 'postslist.njk'%}
+<div class="container">{%include 'postslist.njk'%}</div>
