--- a/_includes/footer.njk
+++ b/_includes/footer.njk
@@ -10,6 +10,9 @@
       <li class="underline">
         <a href="mailto:jeremyluscombe@gmail.com">Email</a>
       </li>
+      <li class="underline">
+        <a href="https://www.linkedin.com/in/jeremyluscombe/">Linkedin</a>
+      </li>
     </ul>
   </div>
 </footer>
