--- a/_includes/subs/layout-note.njk
+++ b/_includes/subs/layout-note.njk
@@ -8,6 +8,14 @@ layout: /layouts/layout.njk
   </div>
 
   <div class="post font-light">
+    <div class="text-right mb-5">
+      <a
+        href="{{ link }}"
+        target="_blank"
+        class="text-sm font-heading text-teal-900"
+        >Material link</a
+      >
+    </div>
     {{ content | safe }}
   </div>
 </div>
