--- a/projects/index.njk
+++ b/projects/index.njk
@@ -3,6 +3,5 @@ layout: /layouts/layout.njk
 title: All projects
 description: A list of all projects
 ---
-<h1 class="font-bold text-4xl italic mb-8">{{title}}</h1>
 
-{%include 'projectslist.njk'%}
+<div class="container">{%include 'projectslist.njk'%}</div>
